colcon_ws/log/build_2022-09-10_08-05-58/dasc_robot/stdout_stderr.log
[ 11%] Built target dascBots
[35m[1mScanning dependencies of target trajectory_follower[0m
[ 66%] Built target example_control_multi_rover
[ 66%] Built target joystick_controller
[ 66%] Built target example_control_geometric
[ 66%] Built target dasc_robot_lib
[ 66%] Built target example_control
[ 77%] Built target example_control_geometric_acceleration
[ 88%] Built target example_control_geometric_velocity
[ 94%] [32mBuilding CXX object CMakeFiles/trajectory_follower.dir/src/trajectory_follower.cpp.o[0m
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp: In member function ‘void TrajectoryFollower::traj_callback(dasc_msgs::msg::QuadTrajectory_<std::allocator<void> >::SharedPtr)’:
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp:126:13: error: no match for call to ‘(QuadTrajectory {aka dasc_msgs::msg::QuadTrajectory_<std::allocator<void> >}) (const SharedPtr&)’
  126 |     traj(msg);
      |             ^
make[2]: *** [CMakeFiles/trajectory_follower.dir/build.make:63: CMakeFiles/trajectory_follower.dir/src/trajectory_follower.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:94: CMakeFiles/trajectory_follower.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
